--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
+    "axios": "^0.19.0",
     "immer": "^4.0.1",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
