--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'meetappmobile' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'meetappmobileTests' do
     inherit! :search_paths
     # Pods for testing
