--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'meetappmobile' do
 
   pod 'CodePush', :path => '../node_modules/react-native-code-push'
 
+  pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
+
   target 'meetappmobileTests' do
     inherit! :search_paths
     # Pods for testing
